refactors in tests, added more builders!