@@ -1,6 +1,6 @@
 package ar.edu.unq.dapp_api.model;
 
-import ar.edu.unq.dapp_api.model.enums.CryptoSymbol;
+import ar.edu.unq.dapp_api.model.builders.CryptoCurrencyBuilder;
 import org.junit.jupiter.api.Test;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -10,31 +10,19 @@ class CryptoCurrencyListTest {
     @Test
     void addCryptoAddsCryptoToList() {
         CryptoCurrencyList cryptoList = new CryptoCurrencyList();
-        CryptoCurrency crypto = CryptoCurrency.builder()
-                .symbol(CryptoSymbol.BTCUSDT)
-                .price(50000.0f)
-                .lastUpdateDateAndTime("2023-10-01T10:00:00")
-                .build();
+        CryptoCurrency crypto = new CryptoCurrencyBuilder().build();
 
         cryptoList.addCrypto(crypto);
 
         assertEquals(1, cryptoList.getCryptos().size());
-        assertEquals(crypto, cryptoList.getCryptos().get(0));
+        assertEquals(crypto, cryptoList.getCryptos().getFirst());
     }
 
     @Test
     void getCryptosReturnsListOfAddedCryptos() {
         CryptoCurrencyList cryptoList = new CryptoCurrencyList();
-        CryptoCurrency crypto1 = CryptoCurrency.builder()
-                .symbol(CryptoSymbol.BTCUSDT)
-                .price(50000.0f)
-                .lastUpdateDateAndTime("2023-10-01T10:00:00")
-                .build();
-        CryptoCurrency crypto2 = CryptoCurrency.builder()
-                .symbol(CryptoSymbol.ETHUSDT)
-                .price(3000.0f)
-                .lastUpdateDateAndTime("2023-10-01T10:00:00")
-                .build();
+        CryptoCurrency crypto1 = new CryptoCurrencyBuilder().build();
+        CryptoCurrency crypto2 = new CryptoCurrencyBuilder().build();
 
         cryptoList.addCrypto(crypto1);
         cryptoList.addCrypto(crypto2);
